Source/cmTarget.h
@@ -277,6 +277,9 @@ private:
   void SetPropertyDefault(const std::string& property,
                           const char* default_value);
 
+  bool CheckImportedLibName(std::string const& prop,
+                            std::string const& value) const;
+
 private:
   cmPropertyMap Properties;
   std::set<std::string> SystemIncludeDirectories;
