Tests/InterfaceLibrary/definetestexe.cpp
@@ -17,8 +17,9 @@
 
 extern int obj();
 extern int sub();
+extern int item();
 
 int main(int, char**)
 {
-  return obj() + sub();
+  return obj() + sub() + item();
 }
